[package]
name = "evm2-precompiles"
description = "Ethereum precompiled contracts for evm2."

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
revm-precompile = { version = "34.0.0", default-features = false }

[features]
default = ["std", "secp256k1", "blst", "c-kzg", "portable"]

std = ["revm-precompile/std"]
hashbrown = ["revm-precompile/hashbrown"]
asm-keccak = ["revm-precompile/asm-keccak"]
asm-sha2 = ["revm-precompile/asm-sha2"]

# Enables the c-kzg point evaluation precompile. This is enabled by default
# because it is the most stable and commonly used implementation.
c-kzg = ["revm-precompile/c-kzg"]

# Compiles in portable mode without ISA extensions so the binary can run on all systems.
portable = ["revm-precompile/portable"]

# Uses `secp256k1` as a faster alternative to `k256`.
# The `secp256k1` crate fails to build for the `wasm` target on Windows and macOS
# because it uses a C library. It passes on Linux. If you do not need to build
# `wasm` on Windows or macOS, this feature is safe to use and is enabled by default.
secp256k1 = ["revm-precompile/secp256k1"]

# Enables the blst implementation of the BLS12-381 precompile.
blst = ["revm-precompile/blst"]

# Enables the substrate implementation of EIP-1962.
bn = ["revm-precompile/bn"]

# Uses GMP for accelerated modexp precompile execution. This dynamically links
# to libgmp at runtime.
gmp = ["revm-precompile/gmp"]

# Uses aws-lc-rs as a faster alternative to `p256` for secp256r1 signature verification.
p256-aws-lc-rs = ["revm-precompile/p256-aws-lc-rs"]
