[package]
name = "evm2"
description = "Experimental EVM interpreter."

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
evm2-macros.workspace = true
evm2-precompiles = { workspace = true, default-features = false }

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-trie = { workspace = true, features = ["ethereum"] }
thiserror.workspace = true

# no_std
once_cell = { workspace = true, features = ["alloc"] }
paste.workspace = true

# "serde"
serde = { workspace = true, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }

[[example]]
name = "registry_tx_handler"
path = "examples/registry/tx_handler.rs"
doc-scrape-examples = true

[[example]]
name = "registry_custom_handler"
path = "examples/registry/custom_handler.rs"
doc-scrape-examples = true

[[example]]
name = "e2e_transfer_sstore"
path = "examples/e2e_transfer_sstore.rs"
doc-scrape-examples = true

[features]
default = ["std", "secp256k1", "blst", "c-kzg", "portable"]
std = [
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-primitives/std",
    "alloy-rlp/std",
    "alloy-trie/std",
    "evm2-precompiles/std",
    "once_cell/std",
    "serde?/std",
    "thiserror/std",
]

nightly = []
hashbrown = ["evm2-precompiles/hashbrown"]
asm-keccak = ["evm2-precompiles/asm-keccak"]
asm-sha2 = ["evm2-precompiles/asm-sha2"]
c-kzg = ["evm2-precompiles/c-kzg"]
portable = ["evm2-precompiles/portable"]
secp256k1 = ["evm2-precompiles/secp256k1"]
blst = ["evm2-precompiles/blst"]
bn = ["evm2-precompiles/bn"]
gmp = ["evm2-precompiles/gmp"]
p256-aws-lc-rs = ["evm2-precompiles/p256-aws-lc-rs"]
serde = [
    "dep:serde",
    "alloy-consensus/serde",
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "alloy-trie/serde",
]
