[package]
name = "evm2"
description = "Experimental EVM interpreter."

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
evm2-macros.workspace = true

alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-trie = { workspace = true, features = ["ethereum"] }
thiserror.workspace = true
cfg-if.workspace = true
once_cell = { workspace = true, features = ["alloc"] }

# no_std
paste.workspace = true

# "serde"
serde = { workspace = true, features = ["derive", "alloc"], optional = true }

# ecrecover
k256 = { workspace = true, features = ["ecdsa"] }
secp256k1 = { workspace = true, features = [
    "alloc",
    "recovery",
    "rand",
    "global-context",
], optional = true }

# sha256
sha2.workspace = true

# ripemd160
ripemd.workspace = true

# modexp
aurora-engine-modexp.workspace = true
gmp-mpfr-sys = { workspace = true, default-features = false, optional = true }

# bn254
bn = { workspace = true, optional = true }
ark-bn254 = { workspace = true, features = ["curve"] }
ark-ec = { workspace = true }
ark-ff = { workspace = true, features = ["asm"] }
ark-serialize = { workspace = true }

# blake2f
arrayref = "0.3.6"

# kzg point evaluation
c-kzg = { workspace = true, optional = true, features = [
    "ethereum_kzg_settings",
] }

# bls12-381
blst = { workspace = true, optional = true }
ark-bls12-381 = { workspace = true, features = ["curve"] }

# p256verify
p256 = { workspace = true, features = ["ecdsa"] }
aws-lc-rs = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
criterion.workspace = true
rand = { workspace = true, features = ["std"] }
ark-std = { workspace = true }
rstest.workspace = true
p256 = { workspace = true, features = ["ecdsa"] }

[[example]]
name = "registry_tx_handler"
path = "examples/registry/tx_handler.rs"
doc-scrape-examples = true

[[example]]
name = "registry_custom_handler"
path = "examples/registry/custom_handler.rs"
doc-scrape-examples = true

[[example]]
name = "e2e_transfer_sstore"
path = "examples/e2e_transfer_sstore.rs"
doc-scrape-examples = true

[features]
default = ["std", "secp256k1", "blst", "c-kzg", "portable"]
std = [
    "alloy-consensus/std",
    "alloy-eips/std",
    "alloy-primitives/std",
    "alloy-rlp/std",
    "alloy-trie/std",
    "serde?/std",
    "thiserror/std",
    "k256/std",
    "secp256k1?/std",
    "sha2/std",
    "ripemd/std",
    "aurora-engine-modexp/std",
    "ark-bn254/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-serialize/std",
    "c-kzg?/std",
    "ark-bls12-381/std",
    "ark-std/std",
    "p256/std",
]

nightly = []
serde = [
    "dep:serde",
    "alloy-consensus/serde",
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "alloy-trie/serde",
]
hashbrown = ["alloy-primitives/map-hashbrown"]
asm-keccak = ["alloy-primitives/asm-keccak"]
asm-sha2 = ["sha2/asm"]
secp256k1 = ["dep:secp256k1"]
gmp = ["dep:gmp-mpfr-sys"]
bn = ["dep:bn"]
c-kzg = ["dep:c-kzg"]
blst = ["dep:blst"]
portable = ["c-kzg?/portable", "blst?/portable"]
p256-aws-lc-rs = ["dep:aws-lc-rs"]
