[package]
name = "evm2-precompiles"
description = "EVM precompiled contracts."

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
evm2.workspace = true
alloy-primitives.workspace = true
cfg-if.workspace = true

# ecrecover
k256 = { workspace = true, features = ["ecdsa"] }
secp256k1 = { workspace = true, features = [
	"alloc",
	"recovery",
	"rand",
	"global-context",
], optional = true }

# sha256
sha2.workspace = true

# ripemd160
ripemd.workspace = true

# modexp
aurora-engine-modexp.workspace = true
gmp-mpfr-sys = { workspace = true, default-features = false, optional = true }

# bn254
bn = { workspace = true, optional = true }
ark-bn254 = { workspace = true, features = ["curve"] }
ark-ec = { workspace = true }
ark-ff = { workspace = true, features = ["asm"] }
ark-serialize = { workspace = true }

# blake2f
arrayref = "0.3.6"

# kzg point evaluation
c-kzg = { workspace = true, optional = true, features = [
	"ethereum_kzg_settings",
] }

# bls12-381
blst = { workspace = true, optional = true }
ark-bls12-381 = { workspace = true, features = ["curve"] }

# p256verify
p256 = { workspace = true, features = ["ecdsa"] }
aws-lc-rs = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
rand = { workspace = true, features = ["std"] }
ark-std = { workspace = true }
rstest.workspace = true
p256 = { workspace = true, features = ["ecdsa"] }

[features]
default = ["std", "secp256k1", "blst", "c-kzg", "portable"]

std = [
	"alloy-primitives/std",
	"k256/std",
	"secp256k1?/std",
	"sha2/std",
	"ripemd/std",
	"aurora-engine-modexp/std",
	"ark-bn254/std",
	"ark-ec/std",
	"ark-ff/std",
	"ark-serialize/std",
	"c-kzg?/std",
	"ark-bls12-381/std",
	"ark-std/std",
	"p256/std",
]
hashbrown = ["alloy-primitives/map-hashbrown"]
asm-keccak = ["alloy-primitives/asm-keccak"]
asm-sha2 = ["sha2/asm"]

# ecrecover
secp256k1 = ["dep:secp256k1"]

# modexp
gmp = ["dep:gmp-mpfr-sys"]

# bn254
bn = ["dep:bn"]

# kzg point evaluation
c-kzg = ["dep:c-kzg"]

# bls12-381
blst = ["dep:blst"]
portable = ["c-kzg?/portable", "blst?/portable"]

# p256verify
p256-aws-lc-rs = ["dep:aws-lc-rs"]
