[package]
name = "evm2-jit-builtins"
description = "EVM bytecode compiler builtins"
homepage = "https://github.com/danipopes/evm2-jit/tree/main/crates/evm2-jit-builtins"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
evm2-jit-context.workspace = true

revm-primitives.workspace = true
revm-interpreter.workspace = true
revm-bytecode.workspace = true
revm-context-interface.workspace = true
paste.workspace = true

evm2-jit-backend = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[features]
default = ["std", "ir"]
std = ["evm2-jit-context/std", "revm-primitives/std", "revm-interpreter/std"]
ir = ["std", "dep:tracing", "dep:evm2-jit-backend"]
