[package]
name = "evm2-jit-cli"
description = "EVM bytecode compiler CLI"
homepage = "https://github.com/danipopes/evm2-jit/tree/main/crates/evm2-jit-cli"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lib]
doc = false

[lints]
workspace = true

[dependencies]
evm2-jit.workspace = true
evm2-jit-statetest = { path = "../statetest" }

revm-bytecode.workspace = true
revm-context = { workspace = true, features = ["std"] }
revm-context-interface = { workspace = true, features = ["std"] }
revm-database = { workspace = true, features = ["std"] }
revm-database-interface = { workspace = true, features = ["std"] }
revm-handler = { workspace = true, features = ["std"] }
revm-interpreter.workspace = true
revm-primitives.workspace = true
revm-state = { workspace = true, features = ["std"] }
revm-statetest-types.workspace = true

clap = { version = "4", features = ["derive"] }
color-eyre.workspace = true
libloading = "0.9"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
eyre.workspace = true
tracing-subscriber = { workspace = true, features = ["registry", "fmt", "env-filter"] }
tracing-tracy = { workspace = true, optional = true, features = ["demangle"] }

[dev-dependencies]
criterion.workspace = true
evm2-jit-cli-tests = { path = "../cli-tests/" }
hex = "0.4"

[build-dependencies]
evm2-jit-build.workspace = true

[features]
default = ["llvm-prefer-dynamic", "evm2-jit/asm-keccak"]
llvm = ["evm2-jit/llvm"]
llvm-prefer-static = ["llvm", "evm2-jit/llvm-prefer-static"]
llvm-prefer-dynamic = ["llvm", "evm2-jit/llvm-prefer-dynamic"]

tracy = ["dep:tracing-tracy"]

[[bin]]
name = "evm2-jit"
path = "src/main.rs"
required-features = ["llvm"]
doc = false

[[bench]]
name = "bench"
path = "benches/bench.rs"
required-features = ["llvm"]
harness = false
doc = false

[[test]]
name = "tests"
path = "tests.rs"
required-features = ["llvm"]
harness = false
doc = false
