[package]
name = "evm2-jit-context"
description = "EVM bytecode compiler runtime context"
homepage = "https://github.com/danipopes/evm2-jit/tree/main/crates/evm2-jit-context"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
alloy-primitives.workspace = true
evm2 = { workspace = true, optional = true }
revm-interpreter.workspace = true
revm-primitives = { workspace = true, optional = true }
ruint.workspace = true

[features]
default = ["std"]
std = [
    "alloy-primitives/std",
    "evm2?/std",
    "revm-interpreter/std",
    "revm-primitives?/std",
]
evm2 = ["dep:evm2", "dep:revm-primitives"]
