[package]
name = "evm2-jit-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
evm2-jit = { workspace = true, features = ["llvm-prefer-dynamic", "__fuzzing"] }
eyre.workspace = true

[build-dependencies]
evm2-jit-build.workspace = true

[[bin]]
name = "vs_interpreter"
path = "fuzz_targets/vs_interpreter.rs"
test = false
doc = false
bench = false
