[package]
name = "evm2-jit-llvm"
description = "EVM bytecode compiler LLVM backend"
homepage = "https://github.com/danipopes/evm2-jit/tree/main/crates/evm2-jit-llvm"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
evm2-jit-backend.workspace = true

inkwell = { version = "0.9.0", features = ["llvm22-1"] }
alloy-primitives = { workspace = true, features = ["std", "map-fxhash"] }
object = { version = "0.39", default-features = false, features = ["read_core", "elf"] }
tracing.workspace = true

[build-dependencies]
cc = "1"

[features]
prefer-static = []
prefer-dynamic = []
